Server Unit Tests
Applied code style to test classes